# MA_Thesis

./: .gitignore  CMakeLists.txt  DesignMat.cpp  DesignMat.h  LmOLS.cpp  LmOLS.h  LogLik.cpp  LogLik.h  LogLik_Tests.R  SimCell.cpp  SimCell.h  conanfile.txt  main.cpp
tests/: DesignMat_Tests.cpp  LmOLS_Test.cpp  LogLik_Tests.cpp  OLS_Tests.Rmd  SimCell_Tests.cpp
